# veritas

./: README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
app/: requirements.txt
src/veritas/: main.py
src/veritas/cli/: __init__.py  claim.py  data.py  init.py  link.py  reference.py  viz.py
src/veritas/templates/: claim.md
src/veritas/utils/: graph.py  parser.py  server.py  slugify.py  validation.py
tests/: test_cli.py  test_utils.py
